# # Process this file with automake to produce Makefile.in.

EXTRA_DIST = \
	$(docs_DATA) \
	filter-help.txt \
	make-filter-man.sh \
	make-import-man.sh \
	make-module-man.sed \
	tcmkmodhelp.py \
	export-mods.txt \
	import-mods.txt

SUBDIRS = \
	man \
	html \
	tech

docsdir = $(datadir)/doc/transcode@TC_VERSUFFIX@

docs_DATA = \
	DV-to-DVD-HOWTO.txt \
	README.Inverse.Telecine.txt \
	README.dv \
	README.cluster \
	README.filter.modfps \
	README.rip \
	README.sync \
	README.vcd \
	README.xvid-credits \
	RELNOTES-0.6.13 \
	RELNOTES-1.1.0 \
	export_ffmpeg.txt \
	export_mp2.txt \
	filter_dnr.txt \
	filter_logo.txt \
	filter_logoaway.txt \
	filter_text.txt \
	filter_yuvdenoise.txt \
	framerate.txt \
	import-xml.txt \
	import_nvrec.txt \
	import_v4l2.txt \
	import_yuv.txt \
	import_x11.txt \
	faq \
	socket_protocol.txt \
	template.cfg.txt
